@@ -7,15 +7,9 @@ import cuke4duke.When;
 
 import static org.junit.Assert.assertEquals;
 
-public class HookSteps {
-    private String b4;
+public class HookSteps extends SuperSteps {
     private String b4WithoutArgs;
     private static String myStatic = "clean";
-
-    @Before("@b4,@whatever")
-    public void setB4(Object scenario) {
-        b4 = "b4 was here";
-    }
 
     @Before
     public void setB4WithoutArgs() {
