@@ -4,6 +4,7 @@
 * Added new @Pending annotation that can be used as a substitute for Ruby-Cucumber's #pending method. (Aslak Hellesøy)
 
 === Bugfixes
+* The @Before annotation of a superclass has no effect in a subclass. (Works now if superclass is abstract) (Aslak Hellesøy)
 * @Before tag should have optional scenario parameter (#11 Aslak Hellesøy, Henning Jensen)
 * Fixed broken Ant script for Groovy example. (Aslak Hellesøy)
 
